update home page and menu styles: fix background transparency, adjust font styles, and improve layout for better readability

--- a/src/app/home-page/home-page.component.sass
+++ b/src/app/home-page/home-page.component.sass
@@ -1,34 +1,34 @@
 // Import dei font
 //@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap')
 
-@font-face 
+@font-face
   font-family: "Cinzel Decorative"
   src: url('/assets/fonts/Cinzel_Decorative/CinzelDecorative-Regular.ttf') format('truetype')
   font-style: normal
 
-@font-face 
+@font-face
   font-family: "Cinzel Decorative"
   src: url('/assets/fonts/Cinzel_Decorative/CinzelDecorative-Bold.ttf') format('truetype')
   font-style: normal
 
-@font-face 
+@font-face
   font-family: "Cinzel Decorative"
   src: url('/assets/fonts/Cinzel_Decorative/CinzelDecorative-Black.ttf') format('truetype')
   font-style: normal
 
-@font-face 
+@font-face
   font-family: "Avenir Next"
   src: url('/assets/fonts/Cinzel_Decorative/Avenir Next/AvenirNextLTPro-Bold.otf') format('opentype')
   font-weight: 700
   font-style: normal
 
-@font-face 
+@font-face
   font-family: "Avenir Next"
   src: url('/assets/fonts/Cinzel_Decorative/Avenir Next/AvenirNextLTPro-It.otf') format('opentype')
   font-weight: 400
   font-style: normal
 
-@font-face 
+@font-face
   font-family: "Avenir Next"
   src: url('/assets/fonts/Cinzel_Decorative/Avenir Next/AvenirNextLTPro-Regular.otf') format('opentype')
   font-weight: 400
@@ -60,14 +60,14 @@ $gray: #cccccc
   position: relative
   overflow: hidden
   color: white
-  background: transaparent
+  background: transparent
 
   .hero-content
     position: relative
     z-index: 1
     max-width: 600px
 
-    .cinzel-decorative-bold 
+    .cinzel-decorative-bold
       font-family: "Cinzel Decorative", serif
       font-weight: 900
       font-size: 4rem
@@ -76,7 +76,6 @@ $gray: #cccccc
     .intro-text
       font-family: "Avenir Next", serif
       font-weight: 400
-      font-style: normal
       font-size: 1.2rem
       font-style: italic
       margin-bottom: 20px
@@ -95,7 +94,7 @@ $gray: #cccccc
 .main-nav
   background-color: white
   padding: 15px
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1)
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)
 
   ul
     list-style: none
@@ -136,30 +135,30 @@ $gray: #cccccc
     padding: 6rem 4rem
     margin: 3rem
 
-    .cinzel-decorative-regular 
+    .cinzel-decorative-regular
       font-family: "Cinzel Decorative", serif
       font-weight: 400
       font-style: normal
       width: 20rem
       margin-right: 7rem
       padding: 5px
-    .cinzel-decorative-bold 
+    .cinzel-decorative-bold
       font-family: "Cinzel Decorative", serif
       font-weight: 700
       font-style: normal
-    .cinzel-decorative-black 
+    .cinzel-decorative-black
       font-family: "Cinzel Decorative", serif
       font-weight: 900
       font-style: normal
-    .avenirNextLTPro-bold 
+    .avenirNextLTPro-bold
       font-family: "Avenir Next", serif
       font-weight: 700
       font-style: normal
-    .avenirNextLTPro-it 
+    .avenirNextLTPro-it
       font-family: "Avenir Next", serif
       font-weight: 400
       font-style: normal
-    .avenirNextLTPro-regular 
+    .avenirNextLTPro-regular
       font-family: "Avenir Next", serif
       font-weight: 400
       font-style: normal
@@ -168,7 +167,7 @@ $gray: #cccccc
       padding: 5px
       line-height: 1.4
 
-  
+
   //background: $bg-light
 
   h2
